# ratifNet

./: README.md  pyproject.toml  requirements.txt  run_deployment.py  run_pipelines.py
.zen/: config.yaml
callbacks/: mlflow_callbacks.py
pipelines/: deployment_pipeline.py  training_pipeline.py  utils.py
src/: data_cleaning.py  evaluate.py  model_dev.py
steps/: cleaning_data.py  config.py  evaluate.py  ingest_data.py  train.py
