[tool.poetry]
name = "zenml-customer-rating"
version = "1.0"
description = "An end to end machine learning pipeline for tabnet"
authors = ["Viraj Shah <viraj.v.shah03@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.0.1"
catboost = "^1.2.2"
lightgbm = "^4.1.0"
aiofiles = "^23.2.1"
aiohttp = "^3.8.6"
aiokafka = "^0.8.1"
aiosignal = "^1.3.1"
alembic = "^1.12.1"
anyio = "^4.0.0"
asttokens = "^2.4.1"
attrs = "^23.1.0"
async-timeout = "^4.0.3"
azure-common = "^1.1.28"
azure-core = "^1.29.5"
azure-mgmt-resource = "^23.0.1"
azure-mgmt-core=="1.4.0"
bcrypt = "^4.0.1"
backcall = "^0.2.0"
blinker = "^1.7.0"
Brotli = "^1.1.0"
certifi = "^2023.7.22"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
click-params = "^0.4.1"
cloudpickle = "^3.0.0"
cmaes = "^0.10.0"
cmake = "^3.27.7"
colorlog = "^6.7.0"
comm = "^0.1.4"
contourpy = "^1.2.0"
cryptography = "^41.0.5"
cuda-python = "^12.3.0"
cycler = "^0.12.1"
Cython = "^3.0.5"
databricks-cli = "^0.18.0"
dataclasses = "^0.8"
decorator = "^5.1.1"
distro = "^1.8.0"
docker = "^6.1.3"
ecdsa = "^0.18.0"
executing = "^2.0.1"
fastapi = "^0.104.1"
fastapi-utils = "^0.2.1"
filelock = "^3.13.1"
Flask = "^3.0.0"
fonttools = "^4.44.0"
frozenlist = "^1.4.0"
gevent = "^23.9.1"
geventhttpclient = "^2.0.11"
gitdb = "^4.0.11"
graphviz = "^0.20.1"
greenlet = "^3.0.1"
grpcio = "^1.59.2"
gunicorn = "^21.2.0"
h11 = "^0.14.0"
httplib2 = "^0.22.0"
httptools = "^0.6.1"
idna = "^3.4"
mlflow = "^2.8.0"
mlserver = "^1.3.5"
mlserver-mlflow = "^1.3.5"
mpmath = "^1.3.0"
networkx = "^3.2.1"
numpy = "^1.26.1"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cuda-runtime = "^0.0.1.dev5"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cudnn-cu11 = "^8.9.6.50"
nvidia-cufft-cu11 = "10.9.0.58"
nvidia-curand-cu11 = "10.2.10.91"
nvidia-cusolver-cu11 = "11.4.0.1"
nvidia-cusparse-cu11 = "11.7.4.91"
nvidia-nccl-cu11 = "2.14.3"
nvidia-nvtx-cu11 = "^11.8.86"
oauthlib = "^3.2.2"
optuna = "3.3.0"
pandas = "^2.1.2"
tqdm = "4.66.1"
traitlets = "5.10.1"
triton = "2.0.0"
tritonclient = "2.37.0.9383150"
typing-extensions = "4.8.0"
tzdata = "2023.3"
urllib3 = "1.26.16"
uvicorn = "0.23.2"
uvloop = "0.17.0"
validators = "0.18.2"
watchfiles = "0.20.0"
wcwidth = "0.2.8"
websocket-client = "1.6.3"
websockets = "11.0.3"
werkzeug = "3.0.0"
widgetsnbextension = "4.0.9"
yarl = "1.9.2"
zenml = "0.44.3"
zipp = "3.17.0"
zope-event = "5.0"
"zope.interface" = "6.0pickleshare==0.7.5"
pillow = "10.0.1"
plotly = "5.17.0"
prometheus-client = "0.17.1"
prompt-toolkit = "3.0.39"
protobuf = "4.24.3"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py-grpc-prometheus = "0.7.0"
pyarrow = "12.0.1"
pyasn1 = "0.5.0"
pycparser = "2.21"
pydantic = "1.10.13"
pygments = "2.16.1"
pyjwt = "2.8.0"
pymysql = "1.0.3"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
python-rapidjson = "1.11"
python-terraform = "0.10.1"
pytorch-tabnet = "4.1.0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
querystring-parser = "1.2.4"
requests = "2.31.0"
rich = "13.6.0"
rsa = "4.9"
scikit-learn = "1.3.1"
scipy = "1.11.3"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.0"
sqlalchemy = "1.4.41"
sqlalchemy-utils = "0.38.3"
sqlalchemy2-stubs = "0.0.2a35"
sqlmodel = "0.0.8"
sqlparse = "0.4.4"
stack-data = "0.6.3"
starlette = "0.22.0"
starlette-exporter = "0.16.0"
sympy = "1.12"
tabulate = "0.9.0"
tenacity = "8.2.3"
threadpoolctl = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
